--- a/Animal_Status/Animal_Status.csproj
+++ b/Animal_Status/Animal_Status.csproj
@@ -19,4 +19,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware\" />
+    <Folder Include="Util\" />
+  </ItemGroup>
+
 </Project>
