--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <Folder Include="Configurations\" />
   </ItemGroup>
 
 </Project>
