--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -22,8 +22,8 @@
   <ItemGroup>
     <Folder Include="BusinessModel\" />
     <Folder Include="Infrastructure\" />
-    <Folder Include="Interfaces\" />
     <Folder Include="Mapping\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
