--- a/Animal_Status/Animal_Status.csproj
+++ b/Animal_Status/Animal_Status.csproj
@@ -26,4 +26,8 @@
     <Folder Include="Util\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj" />
+  </ItemGroup>
+
 </Project>
