--- a/Animal_Status/appsettings.json
+++ b/Animal_Status/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=CLOAKER\\SQLEXPRESS;Initial Catalog=AnimalService;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
