--- a/Animal_Status/appsettings.json
+++ b/Animal_Status/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=CLOAKER\\SQLEXPRESS;Initial Catalog=AnimalService;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-NRBNFJI\\SQLEXPRESS;Initial Catalog=AnimalService;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
